@@ -1,4 +1,5 @@
 ﻿## PLUXML 5.x (sortie : xx/xx/2015) ##
+BUG fix #104: Message d'erreur lorsqu'on essaye d’accéder à une page statique non active
 BUG fix #108: Changement de langue non pris en compte sur l'écran d'installation
 
 ## PLUXML 5.4 (sortie : 13/07/2015) ##
